<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:hint=" First Number"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/secondN"
        android:layout_width="match_parent"
        android:textColor="@color/black"

        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        android:hint=" Second Number"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/firstN" />

    <Button
        android:id="@+id/click"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="click for +"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondN" />

    <Button
        android:id="@+id/clickDivide"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="click for /"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/click" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="text"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="40sp"
        android:id="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickDivide"/>


</androidx.constraintlayout.widget.ConstraintLayout>